# arxiv_recommender

./: .gitignore  .pre-commit-config.yaml  404.html  MakeFile  README.md  index.html  mkdocs.yml  objects.inv  pyproject.toml
.github/workflows/: daily.yaml  daily.yml  daily_digest.yml  docs.yaml  tests.yaml
docs/: index.md  reference.md  usage.md
reference/: index.html
search/: search_index.json
src/: config.yaml
src/arxiv_recommender/: arxiv_retriever.py  main.py
src/arxivrec/: __init__.py  encoder.py  fetcher.py  llm.py  main.py  notification.py  pipeline.py  topic.py
src/arxivrec/dataset/: fetcher.py  hf_fetcher.py  parser.py
src/arxivrec/engine/: encoder.py  llm.py  ranker.py
src/arxivrec/notify/: __init__.py  notification.py
src/arxivrec/utils/: config_parse.py  fallback.py  logger.py  registry.py
src/notebooks/: example.ipynb
test/: conftest.py
test/units/: test_encoder.py  test_fetcher.py  test_llm.py
usage/: index.html
