[project]
name = "arxivrec"
version = "0.1.0"
description = "Daily ArXiv paper recommender using embeddings and LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "ipykernel>=6.0.0",
    "pandas>=2.2.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "ollama>=0.1.5",
]

[project.scripts]
arxiv-rec = "arxivrec.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "pre-commit>=4.5.1",
]

[tool.ruff]
# Enable linting and formatting for notebooks
extend-include = ["src/arxivrec/**/*.ipynb"]
line-length = 120

[tool.ruff.lint]
# Specific rules: E (Error), F (Pyflakes), I (Isort/Imports)
select = ["E", "F", "I"]
fixable = ["ALL"]
