[project]
name = "arxivrec"
version = "0.1.0"
description = "Daily ArXiv paper recommender using embeddings and LLM"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "arxiv>=2.1.0",
    "ipykernel>=6.0.0",
    "pandas>=2.2.0",
    "sentence-transformers>=3.0.0",
    "scikit-learn>=1.4.0",
    "ollama>=0.1.5",
    "pytest>=7.0.0",
    "docling>=2.70.0",
    "openai>=1.0.0",
    "google-generativeai>=0.8.5",
    "anthropic>=0.55.0",
    "tiktoken>=0.9.0",
    "rich>=13.0.0",
]

[project.scripts]
arxiv-rec = "arxivrec.main:main"

[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[dependency-groups]
dev = [
    "mkdocs-material>=9.7.1",
    "mkdocstrings[python]>=1.0.3",
    "mypy>=1.19.1",
    "pre-commit>=4.5.1",
    "pytest-cov>=7.0.0",
    "pytest-xdist>=3.8.0",
]

[tool.ruff]
# Enable linting and formatting for notebooks
extend-include = ["src/arxivrec/**/*.ipynb"]
line-length = 88

[tool.ruff.lint]
# Specific rules: E (Error), F (Pyflakes), I (Isort/Imports)
select = ["E", "F", "I"]
fixable = ["ALL"]

[tool.mypy]
ignore_missing_imports = true
check_untyped_defs = true
disallow_untyped_calls = false
disallow_untyped_defs = false

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["test"]
